--- a/custom.bib
+++ b/custom.bib
@@ -494,3 +494,16 @@ url={https://doi.org/10.1007/s10579-023-09654-3}
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2505.17978}, 
 }
+
+@article{barbaresi-2020-htmldate,
+  title = {{htmldate: A Python package to extract publication dates from web pages}},
+  author = "Barbaresi, Adrien",
+  journal = "Journal of Open Source Software",
+  volume = 5,
+  number = 51,
+  pages = 2439,
+  url = {https://doi.org/10.21105/joss.02439},
+  publisher = {The Open Journal},
+  year = 2020,
+}
+@misc{Firecrawl, title={The web data API for AI}, url={https://www.firecrawl.dev/}, journal={Firecrawl}, author={Firecrawl}, note={Accessed: 2025-12-19}} 
