--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -13,7 +13,7 @@ We have scored 3rd place with a simple pipeline that performs RAG with two retri
     \centering
     %\includegraphics[width=\linewidth]{figures/AVERIMATEC.drawio.png}
     \includegraphics[width=\linewidth]{figures/pipeline2026.pdf}
-    \captionof{figure}{Our refreshed image-text fact-checking pipeline used in CTU AIC AVerImaTeC submission, adapted from~\citealt{ullrich-drchal-2025-aic}.}
+    \captionof{figure}{Our image-text fact-checking pipeline used in CTU AIC AVerImaTeC submission, adapted from~\citealt{ullrich-drchal-2025-aic}. System is described in detail in section~\ref{sec:system2026}.}
     \label{fig:pipeline2026}
 \vspace{1em}
 \end{minipage}
