--- a/emnlp2023.tex
+++ b/emnlp2023.tex
@@ -97,9 +97,9 @@ Prague, Czech Republic\\
   \maketitle
 %}
 \begin{abstract}
-In this paper, we present our 3rd place system in the AVerImaTeC shared task, which combines our last year's retrieval-augmented generation (RAG) pipeline with a simple image similarity based retrieval module.
-Despite its simplicity, our system delivers competitive performance with a single MLLM call per fact-check at just \$0.03 on average using GPT5.1 via OpenAI batch API.
-Our system is also easy to reproduce, consisting of only two straightforward retrievers and a prompt for evidence, label, and justification generation, which is why we suggest it as an accesible starting point for further experimentation.
+In this paper, we present our 3rd place system in the AVerImaTeC shared task, which combines our last year's retrieval-augmented generation (RAG) pipeline with a reverse image search (RIS) module.
+Despite its simplicity, our system delivers competitive performance with a single multimodal LLM call per fact-check at just \$0.03 on average using GPT5.1 via OpenAI batch API.
+Our system is also easy to reproduce and tweak, consisting of only three decoupled modules -- a text-based retrieval module using similarity search, an image-based retrieval module based on API-accessed RIS, and a generation module using GPT5.1 -- which is why we suggest it as an accesible starting point for further experimentation.
 We publish its code\footnote{\url{https://github.com/heruberuto/AVerImaTec\_Shared\_Task}} and prompts, as well as our vector stores and insights into the scheme's running costs and directions for further improvement.
 
 \end{abstract}
