--- a/custom.bib
+++ b/custom.bib
@@ -506,4 +506,31 @@ url={https://doi.org/10.1007/s10579-023-09654-3}
   publisher = {The Open Journal},
   year = 2020,
 }
-@misc{Firecrawl, title={The web data API for AI}, url={https://www.firecrawl.dev/}, journal={Firecrawl}, author={Firecrawl}, note={Accessed: 2025-12-19}} 
+@misc{Firecrawl, title={The web data API for AI}, url={https://www.firecrawl.dev/}, journal={Firecrawl}, author={Firecrawl}, note={Accessed: 2025-12-19}}
+
+@article{10.1162/tacl_a_00454,
+    author = {Guo, Zhijiang and Schlichtkrull, Michael and Vlachos, Andreas},
+    title = {A Survey on Automated Fact-Checking},
+    journal = {Transactions of the Association for Computational Linguistics},
+    volume = {10},
+    pages = {178-206},
+    year = {2022},
+    month = {02},
+    abstract = {Fact-checking has become increasingly important due to the speed with which both
+                    information and misinformation can spread in the modern media ecosystem.
+                    Therefore, researchers have been exploring how fact-checking can be automated,
+                    using techniques based on natural language processing, machine learning,
+                    knowledge representation, and databases to automatically predict the veracity of
+                    claims. In this paper, we survey automated fact-checking stemming from natural
+                    language processing, and discuss its connections to related tasks and
+                    disciplines. In this process, we present an overview of existing datasets and
+                    models, aiming to unify the various definitions given and identify common
+                    concepts. Finally, we highlight challenges for future research.},
+    issn = {2307-387X},
+    doi = {10.1162/tacl_a_00454},
+    url = {https://doi.org/10.1162/tacl_a_00454},
+    eprint = {https://direct.mit.edu/tacl/article-pdf/doi/10.1162/tacl_a_00454/1987018/tacl_a_00454.pdf},
+}
+
+
+
