--- a/src/appendix_a_llms.tex
+++ b/src/appendix_a_llms.tex
@@ -22,7 +22,7 @@
 \begin{figure*}
     \section{System prompt}
     \label{appendix_sec:system2026_prompt}
-    \begin{lstlisting}[breaklines=true, language={}, frame=single, caption={Our fact-checking system prompt to be used with MLLM, feeding the \averitec{} claim text and images into its multimodal user message. Three dots represent omitted repeating parts of the prompt. Adapted for multimodal scenario from~\citealt{ullrich-drchal-2025-aic}.}, label={lst:llm_system_prompt}]
+    \begin{lstlisting}[breaklines=true, language={}, frame=single, caption={Our fact-checking system prompt to be used with Multimodal LLM, feeding the \averitec{} claim text and images into its multimodal user message. Three dots represent omitted repeating parts of the prompt. Adapted for multimodal scenario from~\citealt{ullrich-drchal-2025-aic}.}, label={lst:llm_system_prompt}]
 You are a professional fact checker of image-text claims, formulate up to 10 questions that cover all the facts needed to validate whether the factual statement (in User message) is true, false, uncertain or a matter of opinion. The claim consists of a textual statement and {image_count} images associated with the claim. The claim was made by {author} on {date} via {medium}. Each question has one of four answer types: Boolean, Extractive, Abstractive and Unanswerable using the provided sources.
 After formulating Your questions and their answers using the provided sources, You evaluate the possible veracity verdicts (Supported claim, Refuted claim, Not enough evidence, or Conflicting evidence/Cherrypicking) given your claim and evidence on a Likert scale (1 - Strongly disagree, 2 - Disagree, 3 - Neutral, 4 - Agree, 5 - Strongly agree). Ultimately, you note the single likeliest veracity verdict according to your best knowledge.
 The facts must be coming from the sources listed below. The first {k} sources was retrieved using textual search and the rest was retrieved using reverse image search (google lens). The sources are numbered - sources 1 through {k} are related to the claim text,  sources 11-19 were retrieved for the first user image, 21-29 to the second etc. You may therefore assume that each of the image-based sources was published alongside a picture similar to the respective user image. 
@@ -43,8 +43,7 @@ Please, you MUST only print the output in the following output format:
 {
  "questions":
      [
-         {"question": "<Your first question>", "answer": "<The answer to the Your first question>", "source": "<Single numeric source ID backing the answer for Your first question>", "answer_type":"<The type of first answer>"},
-         {"question": "<Your second question>", "answer": "<The answer to the Your second question>", "source": "<Single numeric Source ID backing the answer for Your second question>", "answer_type":"<The type of second answer>"}
+         {"question": "<Your first question>", "answer": "<The answer to the Your first question>", "source": "<Single numeric source ID backing the answer for Your first question>", "answer_type":"<The type of first answer>"},...
      ],
  "claim_veracity": {
      "Supported": "<Likert-scale rating of how much You agree with the 'Supported' veracity classification>",
@@ -59,7 +58,6 @@ Please, you MUST only print the output in the following output format:
 ---
 ## Few-shot learning
 You have access to the following few-shot learning examples for questions and answers.:
-
 ### Question examples for claim "{example["claim"]}" (verdict {example["gold_label"]})
 "question": "{question}", "answer": "{answer}", "answer_type": "{answer_type}"
 ...
