--- a/src/results.tex
+++ b/src/results.tex
@@ -19,7 +19,7 @@
 \hline
 {\small{HUMANE}}        & {0.89} & {0.54} & {0.55} & {0.56} \\
 {\small{ADA-AGGR}}      & 0.37 & 0.46 & 0.54 & 0.43 \\
-{\small{AIC CTU (ours)} }       & 0.81 & 0.33 & 0.35 & 0.30 \\
+{\textit{\small{AIC CTU (ours)} }}       & \textit{0.81} & \textit{0.33} & \textit{0.35} & \textit{0.30} \\
 {\small{XxP}}           & 0.39 & 0.27 & 0.26 & 0.20 \\
 {\small{teamName}}      & 0.66 & 0.23 & 0.26 & 0.22 \\
 {\small{REVEAL}}        & 0.63 & 0.28 & 0.24 & 0.13 \\
@@ -27,7 +27,7 @@
 \hline
 {\small{Baseline}}      & 0.55 & 0.17 & 0.11 & 0.13 \\
 \end{tabular}
-\caption{System leaderboard showing performance metrics. Best scores are bold.}
+\caption{System leaderboard showing performance metrics. Our system described in section~\ref{sec:system2026} is highlighted with \textit{italics}.}
 \label{tab:leaderboard}
 \end{table}
 
